add endpoint and function
